--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
         
     }
     dependencies {
@@ -16,11 +17,12 @@ buildscript {
     }
 }
 
+/*프로젝트 레벨의 그레들 편집이 필요할 때*/
 allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url "https://jitpack.io" }
     }
 }
 
